--- a/source/sass/blocks/popular-sections.scss
+++ b/source/sass/blocks/popular-sections.scss
@@ -1,5 +1,6 @@
 .popular-sections {
   @media (min-width: 760px) {
+    background-color: #ffffff;
     border: 1px solid #329bc9;
     border-left: none;
     border-right: none;
