--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,10 @@
 .catalog {
   position: relative;
   overflow: hidden;
-  background-color: #fafafa;
+
+  @media (min-width: 1170px) {
+    background-color: #fafafa;
+  }
   @media (min-width: 1800px) {
     background-image: url("../img/catalog-bg-desktop.png");
     background-repeat: no-repeat;
