--- a/source/sass/blocks/choose-color.scss
+++ b/source/sass/blocks/choose-color.scss
@@ -1,4 +1,6 @@
 .choose-color__breadcrumbs {
+  @include mobile-content;
+
   @media (min-width: 760px) {
     margin-bottom: 18px;
   }
@@ -9,6 +11,8 @@
 }
 
 .choose-color__heading {
+  @include mobile-content;
+
   @media (min-width: 760px) {
     @include tablet-content;
     margin: 0 auto;
