--- a/source/sass/blocks/cloth-card.scss
+++ b/source/sass/blocks/cloth-card.scss
@@ -74,7 +74,7 @@
 
 .cloth-card__table {
   @media (min-width: 760px) {
-    width: 200px;
+    width: 290px;
 
     font-size: 12px;
     font-weight: bold;
@@ -87,12 +87,12 @@
     }
 
     & td:last-child {
-      width: 110px;
+      width: 200px;
     }
   }
 
   @media (min-width: 1170px) {
-    width: 290px;
+    width: 370px;
 
     font-size: 18px;
     line-height: 18px;
@@ -102,7 +102,7 @@
     }
 
     & td:last-child {
-      width: 160px;
+      width: 250px;
     }
   }
 }
@@ -111,7 +111,6 @@
   @media (min-width: 760px) {
     margin: 0;
     font-size: 8px;
-    font-weight: bold;
     line-height: 15px;
     text-transform: uppercase;
   }
@@ -187,6 +186,7 @@
   @media (min-width: 760px) {
     margin: 0;
     font-size: 8px;
+    font-weight: normal;
     line-height: 13px;
     text-align: center;
     text-transform: uppercase;
