--- a/source/sass/blocks/cloth-selection.scss
+++ b/source/sass/blocks/cloth-selection.scss
@@ -1,4 +1,6 @@
 .cloth-selection__content {
+  @include mobile-content;
+
   @media (min-width: 760px) {
     @include tablet-content;
     margin: 0 auto;
