--- a/source/sass/blocks/colors-variants.scss
+++ b/source/sass/blocks/colors-variants.scss
@@ -16,6 +16,8 @@
 }
 
 .color-variants__heading {
+  @include mobile-content;
+
   @media (min-width: 760px) {
     @include tablet-content;
     margin: 0 auto;
@@ -38,6 +40,8 @@
 }
 
 .color-variants__list {
+  @include mobile-content;
+
   @media (min-width: 760px) {
     @include tablet-content;
     @include list-reset;
