--- a/source/sass/blocks/main-info.scss
+++ b/source/sass/blocks/main-info.scss
@@ -1,6 +1,7 @@
 .main-info {
   @media (min-width: 760px) {
     position: relative;
+    background-color: #ffffff;
     z-index: 2;
     box-shadow:
       0 3px 38px 0 rgba(0, 0, 0, 0.26);
