--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,6 +12,18 @@
     margin: 0 auto;
   }
 
+  @media (min-width: 1024px) {
+    &::after {
+      content: '';
+      position: absolute;
+      top: 240px;
+      left: -300px;
+      width: 338px;
+      height: 660px;
+      background-image: url("../img/total-tablet-bg.png");
+    }
+  }
+
   @media (min-width: 1170px) {
     @include desktop-content;
     @include bg-lines;
@@ -40,9 +52,20 @@
     color: #0a5a7e;
     text-transform: uppercase;
     letter-spacing: 2px;
+
+    &::before {
+      content: "Меркурий-Интер-Лаб";
+      position: absolute;
+      top: -20px;
+      left: -80px;
+      width: 720px;
+      font-size: 70px;
+      font-weight: 100;
+      text-transform: none;
+      letter-spacing: 2px;
+      opacity: 0.12;
+    }
   }
-
-
 
   @media (min-width: 1170px) {
     margin-bottom: 85px;
@@ -50,15 +73,11 @@
     line-height: 23px;
 
     &::before {
-      content: "Меркурий-Интер-Лаб";
-      position: absolute;
+      top: 0;
       left: -150px;
       width: 1200px;
       font-size: 100px;
-      font-weight: 100;
-      text-transform: none;
       letter-spacing: 5px;
-      opacity: 0.12;
     }
   }
 
