--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -58,6 +58,7 @@
 
   @media (min-width: 1170px) {
     @include desktop-headings;
+    margin-right: auto;
   }
 }
 
@@ -359,6 +360,7 @@
       }
 
       & .categories__to-catalog {
+        height: 48px;
         width: 192px;
       }
     }
@@ -596,7 +598,7 @@
 
   @media (min-width: 1170px) {
     width: 168px;
-    height: 46px;
+    height: 42px;
     letter-spacing: 3px;
   }
 }
