--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -20,6 +20,12 @@
     background-repeat: no-repeat;
   }
 
+  &.main-page {
+    @media (min-width: 1024px) {
+      background: none;
+    }
+  }
+
   @media (min-width: 1170px) {
     &__choose-color,
     &__choose-cloth,
