--- a/source/sass/blocks/popular-products.scss
+++ b/source/sass/blocks/popular-products.scss
@@ -21,6 +21,21 @@
     padding-bottom: 0;
   }
 
+  @media (min-width: 1024px) {
+    z-index: 2;
+    &::after {
+      content: "";
+      position: absolute;
+      right: -220px;
+      top: 220px;
+      width: 262px;
+      height: 508px;
+      background-image: url("../img/total-tablet-bg-2.png");
+      background-repeat: no-repeat;
+      z-index: -1;
+    }
+  }
+
   @media (min-width: 1170px) {
     @include desktop-content;
     @include bg-lines;
