--- a/source/sass/blocks/popular-sections.scss
+++ b/source/sass/blocks/popular-sections.scss
@@ -94,5 +94,27 @@
     padding: 0 32px;
   }
 
+  &.sale-link {
+    @media (min-width: 760px) {
+      &::after {
+        content: "";
+        position: absolute;
+        top: 6px;
+        right: 9px;
+        width: 12px;
+        height: 12px;
+        background-image: url(../img/sale-tablet.png);
+      }
+    }
 
+    @media (min-width: 1170px) {
+      &::after {
+        top: 9px;
+        right: 12px;
+        width: 18px;
+        height: 18px;
+        background-image: url(../img/sale-desktop.png);
+      }
+    }
+  }
 }
