--- a/source/sass/blocks/catalog-categories.scss
+++ b/source/sass/blocks/catalog-categories.scss
@@ -75,13 +75,14 @@
 
 .catalog-categories__deep-list {
   @media (min-width: 760px) {
-    margin-bottom: 10px;
+    margin-bottom: 0;
     padding-left: 38px;
     height: 0;
     overflow: hidden;
 
     &.js-active {
       height: auto;
+      margin-bottom: 10px;
     }
   }
 
