--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -79,9 +79,10 @@
     font-size: 11px;
     font-weight: bold;
     line-height: 11px;
-    color: #0a5a7e;
     text-transform: uppercase;
     letter-spacing: 1px;
+
+    cursor: pointer;
   }
 
   @media (min-width: 1170px) {
