--- a/source/sass/blocks/order-section.scss
+++ b/source/sass/blocks/order-section.scss
@@ -13,6 +13,27 @@
   }
 }
 
+.order-section__heading {
+  margin-right: auto;
+  margin-bottom: 14px;
+  color: #0a5a7e;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  text-shadow:
+    8px 3px 0 rgba(10, 90, 126, 0.2);
+
+  @media (min-width: 760px) {
+    margin-bottom: 36px;
+    font-size: 19px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 62px;
+    font-size: 24px;
+  }
+}
+
 .order-section__list {
   @include list-reset;
 }
@@ -82,6 +103,7 @@
   height: 54px;
 
   font-size: 14px;
+  font-weight: bold;
   line-height: 17px;
   text-transform: uppercase;
   letter-spacing: 1px;
