--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -20,7 +20,9 @@
     background-repeat: no-repeat;
   }
 
-  &.main-page {
+  &.main-page,
+  &.catalog-page,
+  &.color-page {
     @media (min-width: 1024px) {
       background: none;
     }
