--- a/source/sass/blocks/product-delivery.scss
+++ b/source/sass/blocks/product-delivery.scss
@@ -110,6 +110,10 @@
   @media (min-width: 1170px) {
     margin-bottom: 55px;
   }
+
+  &.js-hidden {
+    display: none;
+  }
 }
 
 .product-delivery__item {
