--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -40,6 +40,10 @@
   @media (min-width: 1170px) {
     @include desktop-content;
   }
+
+  &.js-hidden {
+    display: none;
+  }
 }
 
 .reviews__item {
