--- a/source/sass/blocks/to-wholesale-clients.scss
+++ b/source/sass/blocks/to-wholesale-clients.scss
@@ -1,5 +1,13 @@
 .to-wholesale-clients {
   @include mobile-content;
+
+  @media (min-width: 760px) {
+    @include tablet-content;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+  }
 }
 
 .to-wholesale-clients__heading {
@@ -11,16 +19,44 @@
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 1px;
+
+  @media (min-width: 760px) {
+    font-size: 23px;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 28px;
+  }
 }
 
 .to-wholesale-clients__description {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
+
+  @media (min-width: 760px) {
+    font-size: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
+  }
 }
 
 .to-wholesale-clients__image {
   margin: 0;
-
+  width: 290px;
   box-shadow: 2px 3px 90px rgba(0, 0, 0, 0.2);
+
+  & img {
+    width: 100%;
+
+  }
+  @media (min-width: 760px) {
+    width: 760px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 1140px;
+  }
 }
