--- a/source/sass/blocks/product-view.scss
+++ b/source/sass/blocks/product-view.scss
@@ -63,6 +63,18 @@
   &.js-show {
     display: block;
   }
+
+  &:nth-of-type(1) {
+    background-image: url("../img/product-view-main-2x.jpg");
+  }
+
+  &:nth-of-type(2) {
+    background-image: url("../img/product-view-main-2-2x.jpg");
+  }
+
+  &:nth-of-type(3) {
+    background-image: url("../img/product-view-main-3-2x.jpg");
+  }
 }
 
 .product-view__main-img {
