--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -112,7 +112,7 @@
   width: 280px;
   line-height: 17px;
 
-  &:last-child {
+  &:last-child:not(:first-child) {
     border-top: 1px solid #04235d;
   }
 
