--- a/source/sass/blocks/sizes-tables.scss
+++ b/source/sass/blocks/sizes-tables.scss
@@ -36,6 +36,10 @@
   display: flex;
   flex-direction: column;
   background: none;
+
+  @media (min-width: 1170px) {
+    padding-bottom: 76px;
+  }
 }
 
 .sizes-tables__item {
@@ -77,7 +81,7 @@
     &:last-child::before {
       right: -15px;
       width: 226px;
-      height: 228px;
+      height: 360px;
       background-image: url("../img/sizes-help-man.png");
     }
   }
