--- a/source/sass/blocks/cloth-variants.scss
+++ b/source/sass/blocks/cloth-variants.scss
@@ -46,6 +46,8 @@
 }
 
 .cloth-variants__item {
+  position: relative;
+  overflow: hidden;
   @media (min-width: 760px) {
     display: flex;
     flex-direction: column;
@@ -166,6 +168,10 @@
       width: 30px;
       height: 20px;
     }
+
+    &:hover + .cloth-variants__colors {
+      bottom: 0;
+    }
   }
 
   @media (min-width: 1170px) {
@@ -181,5 +187,55 @@
       width: 45px;
       height: 35px;
     }
+  }
+}
+
+.cloth-variants__colors {
+  @include list-reset;
+  position: absolute;
+  bottom: -44px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #ffffff;
+  min-height: 44px;
+  transition-duration: 0.4s;
+
+  @media (min-width: 760px) {
+    &:hover {
+      bottom: 0;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    bottom: -63px;
+    min-height: 63px;
+  }
+}
+
+.cloth-variants__color {
+  & span {
+    @media (min-width: 760px) {
+      display: flex;
+      margin-right: 5px;
+      width: 18px;
+      height: 18px;
+      background-color: darkorange;
+      cursor: pointer;
+      transition-duration: 0.4s;
+    }
+
+    @media (min-width: 1170px) {
+      margin-right: 9px;
+      width: 25px;
+      height: 25px;
+    }
+  }
+
+  & input:checked + span {
+    box-shadow:
+      inset 0 0 0 2px #3199c7;
   }
 }
