--- a/source/sass/blocks/sizes-tables.scss
+++ b/source/sass/blocks/sizes-tables.scss
@@ -12,22 +12,32 @@
 }
 
 .sizes-tables__heading {
+  @include mobile-content;
+
   @media (min-width: 760px) {
-    margin: 0;
-    margin-bottom: 42px;
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 20px;
-    color: #3199c7;
+    @include tablet-content;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    padding-top: 10px;
+
+    font-size: 16px;
+    line-height: 11px;
+    color: #0a5a7e;
     text-transform: uppercase;
     text-shadow:
-      23px 8px 0 rgba(49, 153, 199, 0.2);
+      14px 4px 0 rgba(10, 90, 126, 0.2);
+    letter-spacing: 1px;
   }
 
   @media (min-width: 1170px) {
-    margin-bottom: 55px;
-    font-size: 34px;
-    line-height: 34px;
+    @include desktop-content;
+    margin-bottom: 40px;
+    padding-top: 22px;
+
+    font-size: 24px;
+    line-height: 16px;
+    letter-spacing: 2px;
   }
 }
 
