--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -23,7 +23,7 @@
 
   @media (min-width: 1170px) {
     @include desktop-content;
-    padding-top: 142px;
+    padding-top: 45px;
   }
 }
 
@@ -117,150 +117,7 @@
   }
 
   @media (min-width: 1170px) {
+    padding-bottom: 70px;
     width: 1005px;
-  }
-}
-
-.banner__text {
-  @media (min-width: 760px) {
-    margin-right: auto;
-    padding-left: 10px;
-  }
-
-  @media (min-width: 1170px) {
-    padding-left: 34px;
-  }
-}
-
-.banner__heading {
-  margin: 0;
-  width: 244px;
-  font-size: 23px;
-  font-weight: bold;
-  line-height: 31px;
-  color: #0a5a7e;
-  letter-spacing: 1.5px;
-
-  @media (min-width: 760px) {
-    padding-top: 38px;
-    width: 302px;
-    font-size: 28px;
-    line-height: 36px;
-  }
-
-  @media (min-width: 1170px) {
-    padding-top: 20px;
-    width: 510px;
-    font-size: 48px;
-    line-height: 61px;
-  }
-}
-
-.banner__lead {
-  margin: 0;
-  margin-bottom: 10px;
-  width: 244px;
-  font-size: 23px;
-  font-weight: 300;
-  line-height: 31px;
-  color: #0a5a7e;
-
-  @media (min-width: 760px) {
-    margin-bottom: 16px;
-    width: 312px;
-    font-size: 28px;
-    line-height: 36px;
-  }
-
-  @media (min-width: 1170px) {
-    width: 510px;
-    font-size: 48px;
-    line-height: 61px;
-  }
-}
-
-.banner__description {
-  margin: 0;
-  margin-bottom: 23px;
-  width: 200px;
-  font-weight: 300;
-  line-height: 19px;
-  color: #000000;
-
-  @media (min-width: 760px) {
-    width: 300px;
-    font-size: 14px;
-    line-height: 15px;
-  }
-
-  @media (min-width: 1170px) {
-    width: 490px;
-    font-size: 18px;
-    line-height: 25px;
-  }
-}
-
-.banner__link {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  margin-bottom: 30px;
-  width: 143px;
-  height: 34px;
-  border: 1px solid #ffffff;
-  font-size: 11px;
-  font-weight: bold;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #ffffff;
-  letter-spacing: 4px;
-
-  @media (min-width: 760px) {
-    margin-bottom: 52px;
-    width: 130px;
-    height: 30px;
-    border-color: #0a5a7e;
-    color: #0a5a7e;
-
-    &:hover,
-    &:focus {
-      box-shadow:
-        0 0 8px 0 rgba(0, 0, 0, 0.23);
-      text-shadow:
-        0 0 8px rgba(0, 0, 0, 0.23);
-    }
-
-    &:active {
-      border-width: 2px;
-    }
-  }
-
-  @media (min-width: 1170px) {
-    width: 217px;
-    height: 51px;
-    font-size: 16px;
-    line-height: 23px;
-  }
-}
-
-.banner__image {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 138px;
-  height: 152px;
-
-  @media (min-width: 760px) {
-    right: 50px;
-    width: 270px;
-    height: 272px;
-  }
-
-  @media (min-width: 1170px) {
-    right: 100px;
-    width: 451px;
-    height: 456px;
   }
 }
