--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,9 @@
 @import "blocks/nav-categories";
 @import "blocks/popular-sections";
 @import "blocks/banner";
+@import "blocks/first-slide";
+@import "blocks/second-slide";
+@import "blocks/third-slide";
 @import "blocks/advantages";
 @import "blocks/categories";
 @import "blocks/main-content";
@@ -21,6 +24,7 @@
 @import "blocks/footer-categories";
 @import "blocks/schedule-table";
 @import "blocks/footer-info";
+@import "blocks/map";
 @import "blocks/popups";
 @import "blocks/popup-city";
 @import "blocks/popup-callback";
