--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,18 +1,24 @@
 .banner {
-  background-image: url("../img/banner-bg.jpg");
+  background-image: url("../img/banner-bg-mobile.jpg");
   background-position: 58% 0;
   background-color: #aad2e6;
   @media (min-width: 760px) {
-    background-image: url("../img/banner-bg-desktop.jpg");
+    background-image: url("../img/banner-bg-tablet.jpg");
     box-shadow:
       0 18px 38px 0 rgba(0, 0, 0, 0.10)
+  }
+
+  @media (min-width: 1170px) {
+    background-image: url("../img/banner-bg-desktop.jpg");
   }
 }
 
 .banner__content {
   @include mobile-content;
+  width: 320px;
   position: relative;
   display: flex;
+  justify-content: center;
   padding-top: 19px;
   @media (min-width: 760px) {
     @include tablet-content;
@@ -88,13 +94,27 @@
   }
 }
 
+.banner__list-wrapper {
+  position: relative;
+  overflow: hidden;
+  visibility: hidden;
+
+  @media (min-width: 760px) {
+    position: static;
+    overflow: visible;
+    visibility: visible;
+  }
+}
+
 .banner__list {
   @include list-reset;
+  position: relative;
   display: flex;
-  width: 290px;
+  width: 320px;
   overflow: hidden;
 
   @media (min-width: 760px) {
+    position: static;
     width: 675px;
   }
 
@@ -105,15 +125,21 @@
 }
 
 .banner__item {
+  float: left;
+  //margin-right: 15px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
   flex-shrink: 0;
-  width: 290px;
 
   transform: translateX(0);
 
-  transition-duration: 1s;
-
   @media (min-width: 760px) {
+    position: static;
     width: 675px;
+    transition-duration: 1s;
+    float: none;
   }
 
   @media (min-width: 1170px) {
