--- a/source/sass/blocks/third-slide.scss
+++ b/source/sass/blocks/third-slide.scss
@@ -1,13 +1,13 @@
 .third-slide {
-  display: none;
+  padding-top: 5px;
+  background-image: url(../img/third-slide-bg.png);
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  background-size: 171px 234px;
 
   @media (min-width: 760px) {
-    display: block;
     padding-top: 60px;
 
-    background-image: url(../img/third-slide-bg.png);
-    background-repeat: no-repeat;
-    background-position: 100% 0px;
     background-size: 339px 430px;
   }
 
@@ -17,9 +17,10 @@
 }
 
 .third-slide__text {
+  padding-left: 10px;
+
   @media (min-width: 760px) {
     margin-right: auto;
-    padding-left: 10px;
   }
 
   @media (min-width: 1170px) {
@@ -28,26 +29,51 @@
 }
 
 .third-slide__heading {
+  position: relative;
   margin: 0;
-  width: 244px;
-  font-size: 23px;
+  margin-bottom: 20px;
+  width: 210px;
+  font-size: 16px;
   font-weight: bold;
-  line-height: 31px;
+  line-height: 23px;
   color: #0a5a7e;
+  text-transform: uppercase;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 100px;
+    width: 72px;
+    height: 2px;
+    background-image: linear-gradient(to right, #cdd4ee, #9dc2e9);
+  }
 
   @media (min-width: 760px) {
+    margin-bottom: 16px;
     padding-top: 10px;
     width: 540px;
     font-size: 27px;
     line-height: 38px;
-    text-transform: uppercase;
+
+    &::before {
+      top: 130px;
+      width: 120px;
+      height: 3px;
+    }
   }
 
   @media (min-width: 1170px) {
+    margin-bottom: 50px;
     padding-top: 20px;
     width: 650px;
     font-size: 36px;
     line-height: 50px;
+
+    &::before {
+      top: 195px;
+      width: 158px;
+      height: 3px;
+    }
 
     &-name {
       font-size: 32px;
@@ -58,23 +84,20 @@
 
 .third-slide__lead {
   margin: 0;
-  margin-bottom: 10px;
   width: 244px;
-  font-size: 23px;
+  font-size: 16px;
   font-weight: bold;
-  line-height: 31px;
+  line-height: 23px;
   color: #000000;
   text-transform: uppercase;
 
   @media (min-width: 760px) {
-    margin-bottom: 16px;
     width: 540px;
     font-size: 27px;
     line-height: 38px;
   }
 
   @media (min-width: 1170px) {
-    margin-bottom: 50px;
     width: 650px;
     font-size: 36px;
     line-height: 50px;
@@ -83,10 +106,11 @@
 
 .third-slide__description {
   margin: 0;
-  margin-bottom: 23px;
-  width: 200px;
+  margin-bottom: 10px;
+  width: 145px;
+  font-size: 10px;
   font-weight: bold;
-  line-height: 19px;
+  line-height: 13px;
   color: #0a5a7e;
 
   @media (min-width: 760px) {
@@ -109,16 +133,17 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  margin-bottom: 30px;
-  width: 143px;
-  height: 34px;
-  border: 1px solid #ffffff;
-  font-size: 11px;
+  margin-bottom: 17px;
+  width: 100px;
+  height: 24px;
+  border: 1px solid #0a5a7e;
+  font-size: 8px;
   font-weight: bold;
+  line-height: 10px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #ffffff;
-  letter-spacing: 4px;
+  color: #0a5a7e;
+  letter-spacing: 1px;
 
   @media (min-width: 760px) {
     margin-bottom: 52px;
@@ -153,21 +178,27 @@
 .third-slide__image {
   position: absolute;
   right: 0;
-  bottom: 0;
-  width: 138px;
-  height: 152px;
+  bottom: -40px;
 
   @media (min-width: 760px) {
     right: 20px;
     bottom: -200px;
-    width: auto;
-    height: 530px;
   }
 
   @media (min-width: 1170px) {
     bottom: -280px;
     right: 0;
-    width: 203px;
-    height: 712px;
+  }
+
+  & img {
+    height: 276px;
+
+    @media (min-width: 760px) {
+      height: 530px;
+    }
+
+    @media (min-width: 1170px) {
+      height: 712px;
+    }
   }
 }
