--- a/source/sass/blocks/popup-quick-view.scss
+++ b/source/sass/blocks/popup-quick-view.scss
@@ -1,223 +1,413 @@
 .popup-quick-view__form {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding-top: 47px;
-  padding-left: 38px;
-  width: 874px;
+  @media (min-width: 760px) {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 44px;
+    padding-left: 33px;
+    width: 756px;
+  }
+
+  @media (min-width: 1170px) {
+    padding-top: 47px;
+    padding-left: 38px;
+    width: 874px;
+  }
 }
 
 .popup-quick-view__img-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: space-between;
-  width: 260px;
+  @media (min-width: 760px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-between;
+    width: 224px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 260px;
+  }
 }
 
 .popup-quick-view__main-img {
-  margin-bottom: 19px;
+  @media (min-width: 760px) {
+    margin-bottom: 16px;
+    width: 224px;
+    height: 308px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 19px;
+    width: 259px;
+    height: 355px;
+  }
+}
+
+.popup-quick-view__img-preview {
+  @media (min-width: 760px) {
+    width: 62px;
+    height: 64px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 72px;
+    height: 73px;
+  }
 }
 
 .popup-quick-view__inputs {
-  margin-right: 54px;
+  @media (min-width: 760px) {
+    margin-right: 47px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 54px;
+  }
+
 }
 
 .popup-quick-view__fieldset {
-  margin: 0;
-  padding: 0;
-  width: 486px;
-  border: none;
+  @media (min-width: 760px) {
+    margin: 0;
+    padding: 0;
+    width: 421px;
+    border: none;
+  }
+
+  @media (min-width: 1170px) {
+    width: 486px;
+    border: none;
+  }
 }
 
 .popup-quick-view__fieldset-content {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 35px;
+  @media (min-width: 760px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 35px;
+  }
 }
 
 .popup-quick-view__legend {
-  position: relative;
-  margin-bottom: 13px;
-  font-size: 16px;
-  line-height: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-
-  &::before {
-    counter-increment: quick-legend;
-    content: counter(quick-legend);
-    position: absolute;
-    left: -7px;
-    top: -18px;
-
-    opacity: 0.3;
-    font-size: 34px;
+  @media (min-width: 760px) {
+    position: relative;
+    margin-bottom: 13px;
+    font-size: 10px;
+    line-height: 10px;
     font-weight: bold;
-    line-height: 44px;
-    color: #0a5a7e;
+    text-transform: uppercase;
+
+    &::before {
+      counter-increment: quick-legend;
+      content: counter(quick-legend);
+      position: absolute;
+      left: -7px;
+      top: -18px;
+
+      opacity: 0.3;
+      font-size: 27px;
+      font-weight: bold;
+      line-height: 39px;
+      color: #0a5a7e;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
+    line-height: 16px;
+
+    &::before {
+      font-size: 34px;
+      line-height: 44px;
+    }
   }
 }
 
 .popup-quick-view__select-label {
-  margin: 0;
-  width: 130px;
-  font-size: 12px;
-  line-height: 16px;
-  text-transform: uppercase;
+  @media (min-width: 760px) {
+    margin: 0;
+    width: 112px;
+    font-size: 10px;
+    line-height: 14px;
+    text-transform: uppercase;
 
-  &:not(:last-child) {
-    margin-right: 48px;
+    &:not(:last-child) {
+      margin-right: 46px;
+    }
+
+    & select {
+      margin-top: 10px;
+    }
   }
 
-  & select {
-    margin-top: 12px;
+  @media (min-width: 1170px) {
+    width: 130px;
+    font-size: 12px;
+    line-height: 16px;
+
+    &:not(:last-child) {
+      margin-right: 48px;
+    }
+
+    & select {
+      margin-top: 12px;
+    }
   }
 }
 
 .popup-quick-view__cloth {
-  & span {
-    box-sizing: border-box;
-    display: inline-block;
-    padding-top: 7px;
-    width: 81px;
-    height: 25px;
-    font-size: 12px;
-    line-height: 12px;
-    text-transform: uppercase;
-    text-align: center;
+  @media (min-width: 760px) {
+    & span {
+      box-sizing: border-box;
+      display: inline-block;
+      padding-top: 4px;
+      width: 70px;
+      height: 22px;
+      font-size: 10px;
+      line-height: 10px;
+      text-transform: uppercase;
+      text-align: center;
+    }
+
+    & input:checked + span {
+      font-weight: bold;
+      color: #3199c7;
+      box-shadow:
+        inset 0 0 0 2px #3199c7;
+    }
   }
 
-  & input:checked + span {
-    font-weight: bold;
-    color: #3199c7;
-    box-shadow:
-      inset 0 0 0 2px #3199c7;
+  @media (min-width: 1170px) {
+    & span {
+      padding-top: 7px;
+      width: 81px;
+      height: 25px;
+      font-size: 12px;
+      line-height: 12px;
+    }
   }
 }
 
 .popup-quick-view__main-color {
-  width: 344px;
-  min-height: 68px;
-  align-content: space-between;
+  @media (min-width: 760px) {
+    width: 291px;
+    min-height: 59px;
+    align-content: space-between;
+  }
+
+  @media (min-width: 1170px) {
+    width: 344px;
+    min-height: 68px;
+  }
 }
 
 .popup-quick-view__color-label {
-  & span {
-    display: flex;
-    margin-right: 9px;
-    width: 25px;
-    height: 25px;
-    background-color: darkorange;
+  @media (min-width: 760px) {
+    & span {
+      display: flex;
+      margin-right: 7px;
+      width: 22px;
+      height: 22px;
+      background-color: darkorange;
+    }
+
+    & input:checked + span {
+      box-shadow:
+        inset 0 0 0 2px #3199c7;
+    }
   }
 
-  & input:checked + span {
-    box-shadow:
-      inset 0 0 0 2px #3199c7;
+  @media (min-width: 1170px) {
+    & span {
+      margin-right: 9px;
+      width: 25px;
+      height: 25px;
+    }
   }
 }
 
 .popup-quick-view__color-finish {
-  width: 344px;
+  @media (min-width: 760px) {
+    width: 291px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 344px;
+  }
 }
 
 .popup-quick-view__total-container {
-  box-sizing: border-box;
-  margin-right: 44px;
-  margin-bottom: 34px;
-  padding-left: 119px;
-  padding-top: 34px;
-  width: 792px;
-  border: 1px solid #3199c7;
+  @media (min-width: 760px) {
+    box-sizing: border-box;
+    margin-right: 38px;
+    margin-bottom: 29px;
+    padding-left: 102px;
+    padding-top: 30px;
+    width: 686px;
+    border: 1px solid #3199c7;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 44px;
+    margin-bottom: 34px;
+    padding-left: 119px;
+    padding-top: 34px;
+    width: 792px;
+  }
 }
 
 .popup-quick-view__table {
-  margin-right: 116px;
-  width: 554px;
+  @media (min-width: 760px) {
+    margin-right: 102px;
+    width: 480px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 116px;
+    width: 554px;
+  }
 }
 
 .popup-quick-view__table-body {
-  display: flex;
-  flex-direction: column;
+  @media (min-width: 760px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .popup-quick-view__price-row {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  @media (min-width: 760px) {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 20px;
+  }
 }
 
 .popup-quick-view__total-field {
-  margin-right: 106px;
-  font-size: 18px;
-  line-height: 16px;
-  letter-spacing: 1.6px;
-  text-transform: uppercase;
+  @media (min-width: 760px) {
+    margin-right: 93px;
+    font-size: 16px;
+    line-height: 14px;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 106px;
+    font-size: 18px;
+    line-height: 16px;
+    letter-spacing: 1.6px;
+  }
 }
 
 .popup-quick-view__discount-field {
-  font-size: 22px;
-  line-height: 16px;
-  text-decoration: line-through;
+  @media (min-width: 760px) {
+    font-size: 19px;
+    line-height: 14px;
+    text-decoration: line-through;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 22px;
+    line-height: 16px;
+  }
 }
 
 .popup-quick-view__price-field {
-  font-size: 36px;
-  font-weight: bold;
-  line-height: 16px;
-  color: #d71010;
+  @media (min-width: 760px) {
+    font-size: 31px;
+    font-weight: bold;
+    line-height: 14px;
+    color: #d71010;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 36px;
+    line-height: 16px;
+  }
 }
 
 .popup-quick-view__vendor-code-field {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 16px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  @media (min-width: 760px) {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 2px;
+  }
 }
 
 .popup-quick-view__submit {
-  margin-bottom: 23px;
-  margin-left: 165px;
-  width: 233px;
-  height: 53px;
+  @media (min-width: 760px) {
+    margin-bottom: 20px;
+    margin-left: 143px;
+    width: 202px;
+    height: 46px;
 
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 17px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 23px;
+    margin-left: 165px;
+    width: 233px;
+    height: 53px;
+
+    font-size: 16px;
+    line-height: 17px;
+    letter-spacing: 2px;
+  }
 }
 
 .popup-quick-view__close {
-  position: absolute;
-  top: 27px;
-  right: 34px;
-  padding: 0;
-  width: 20px;
-  height: 20px;
-  background: none;
-  border: none;
-  cursor: pointer;
-
-  &::before {
-    content: "";
+  @media (min-width: 760px) {
     position: absolute;
-    left: -1px;
-    width: 24px;
-    height: 2px;
-    transform: rotate(45deg);
-    background-color: #0a5a7e;
+    top: 27px;
+    right: 34px;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: -1px;
+      width: 24px;
+      height: 2px;
+      transform: rotate(45deg);
+      background-color: #0a5a7e;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: -1px;
+      width: 24px;
+      height: 2px;
+      transform: rotate(-45deg);
+      background-color: #0a5a7e;
+    }
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    left: -1px;
-    width: 24px;
-    height: 2px;
-    transform: rotate(-45deg);
-    background-color: #0a5a7e;
+  @media (min-width: 1170px) {
+
   }
 }
